--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+baseurl: /justine-and-fred.github.io
 
 # Site settings
 title: Mariage de Justine et Fred
