--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 1, rue du Ruisseau
+  - line: Hamoir, 4180 
 
 # Build settings
 markdown: kramdown
