--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 1, rue du Ruisseau
-  - line: Hamoir, 4180 
+  - line: 1 rue du Ruisseau
+  - line: 4180 Hamoir 
 
 # Build settings
 markdown: kramdown
