--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "Nous nous marions !"
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
-  secondary: fec503  
+  secondary: EC382F  
   secondary-dark: 333
 
 # Team names, titles and social links
