--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "Nous nous marions !"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
+  primary: EC382F
   secondary: EC382F  
   secondary-dark: 333
 
