--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description: "Nous nous marions !"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: EC382F
-  secondary: EC382F  
+  primary: fed100
+  secondary: fec503  
   secondary-dark: 333
 
 # Team names, titles and social links
