--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://y7kim.github.io
+url: /justine-and-fred.github.io/
 baseurl: /justine-and-fred.github.io
 
 # Site settings
@@ -36,16 +36,7 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
