--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-url: /Users/fred/GitHub
-baseurl: /Justine-and-fred.github.io
+
+url : http://Justine-and-fred.github.io
+baseurl: http://Justine-and-fred.github.io
 
 # Site settings
 title: Mariage de Justine et Fred
