--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
-url : http://Justine-and-fred.github.io
-baseurl: http://Justine-and-fred.github.io
+url : 
+baseurl: http://justine-and-fred.github.io
 
 # Site settings
 title: Mariage de Justine et Fred
