--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
-url : 
-baseurl: http://justine-and-fred.github.io
+url : http://justine-and-fred.github.io
+baseurl: /justine-and-fred
 
 # Site settings
 title: Mariage de Justine et Fred
