--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 url : http://justine-and-fred.github.io
-baseurl: 
+baseurl: /justine-and-fred
 
 # Site settings
 title: Mariage de Justine et Fred
